crates/palimpsest-sql/snapshots/snapshots__mir_canonicalized.snap
---
source: crates/palimpsest-sql/tests/snapshots.rs
expression: "format!(\"canonical_form:\\n{}\\n\\ncollapsed_mir:\\n{canonicalized:#?}\",\ncanonical_form(&canonicalized))"
---
canonical_form:
topk:[OrderKey { expression: "post_id", descending: false }]:10:0[input000:project:recent_posts.id AS post_id,authors.name[input000:join:Inner:[(ColumnRef { relation: Some("recent_posts"), name: "author_id" }, ColumnRef { relation: Some("authors"), name: "id" })][input000:cte-ref[cte:project:id,author_id,created_at[input000:filter:author_id IN (42, 7) AND created_at IS NOT NULL[input000:base:posts:[][]]]],input001:base:authors:[][]]]]

collapsed_mir:
MirGraph {
    graph: Graph {
        Ty: "Directed",
        node_count: 8,
        edge_count: 7,
        edges: (1, 2), (2, 3), (3, 4), (4, 5), (0, 5), (5, 6), (6, 7),
        node weights: {
            0: BaseTable {
                table: "authors",
                project: [],
            },
            1: BaseTable {
                table: "posts",
                project: [],
            },
            2: Filter {
                predicate: "author_id IN (42, 7) AND created_at IS NOT NULL",
            },
            3: Project {
                columns: [
                    "id",
                    "author_id",
                    "created_at",
                ],
            },
            4: CteRef {
                cte: "recent_posts",
            },
            5: Join {
                kind: Inner,
                on: [
                    (
                        ColumnRef {
                            relation: Some(
                                "recent_posts",
                            ),
                            name: "author_id",
                        },
                        ColumnRef {
                            relation: Some(
                                "authors",
                            ),
                            name: "id",
                        },
                    ),
                ],
            },
            6: Project {
                columns: [
                    "recent_posts.id AS post_id",
                    "authors.name",
                ],
            },
            7: TopK {
                order_by: [
                    OrderKey {
                        expression: "post_id",
                        descending: false,
                    },
                ],
                limit: 10,
                offset: 0,
            },
        },
        edge weights: {
            0: Input(
                0,
            ),
            1: Input(
                0,
            ),
            2: CteExpansion,
            3: Input(
                0,
            ),
            4: Input(
                1,
            ),
            5: Input(
                0,
            ),
            6: Input(
                0,
            ),
        },
    },
    root: NodeIndex(7),
}
