crates/palimpsest-sql/snapshots/snapshots__mir_raw.snap
---
source: crates/palimpsest-sql/tests/snapshots.rs
expression: "format!(\"{mir:#?}\")"
---
MirGraph {
    graph: Graph {
        Ty: "Directed",
        node_count: 8,
        edge_count: 7,
        edges: (1, 2), (2, 3), (3, 0), (0, 5), (4, 5), (5, 6), (6, 7),
        node weights: {
            0: CteRef {
                cte: "recent_posts",
            },
            1: BaseTable {
                table: "posts",
                project: [],
            },
            2: Filter {
                predicate: "author_id IN (42, 7) AND created_at IS NOT NULL",
            },
            3: Project {
                columns: [
                    "id",
                    "author_id",
                    "created_at",
                ],
            },
            4: BaseTable {
                table: "authors",
                project: [],
            },
            5: Join {
                kind: Inner,
                on: [
                    (
                        ColumnRef {
                            relation: Some(
                                "recent_posts",
                            ),
                            name: "author_id",
                        },
                        ColumnRef {
                            relation: Some(
                                "authors",
                            ),
                            name: "id",
                        },
                    ),
                ],
            },
            6: Project {
                columns: [
                    "post_id",
                    "authors.name",
                ],
            },
            7: TopK {
                order_by: [
                    OrderKey {
                        expression: "post_id",
                        descending: false,
                    },
                ],
                limit: 10,
                offset: 0,
            },
        },
        edge weights: {
            0: Input,
            1: Input,
            2: CteExpansion,
            3: Input,
            4: Input,
            5: Input,
            6: Input,
        },
    },
    root: NodeIndex(7),
}
